[package]
name = "redox_termios"
version = "0.1.3"
description = "A Rust library to access Redox termios functions"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/termios"
documentation = "https://docs.rs/redox_termios"
edition = "2021"

[lib]
name = "redox_termios"
path = "src/lib.rs"

[dependencies]
